--- a/_config.yml
+++ b/_config.yml
@@ -12,16 +12,16 @@ title                    : "Xinfeng Yuan"
 title_separator          : "-"
 name                     : &name "Xinfeng Yuan"
 description              : &description "personal description"
-url                      : https://XinfengYuan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Joanna0123.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Joanna0123/XinfengYuan.github.io"
+repository               : "Joanna0123/Joanna0123.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "xinfeng.png"
+  avatar           : "profile.png"
   name             : "Xinfeng Yuan"
   pronouns         : # example: "she/her"  
   bio              : "First-year master's student at Fudan University's School of Big Data."
