--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Xinfeng Yuan"
   pronouns         : # example: "she/her"  
-  bio              : "First-year master's student at Fudan University's School of Big Data."
+  bio              : "First-year master's student at Fudan University's School of Data Science."
   location         : "Shanghai, China"
   employer         : "Fudan University"
   uri              : # URL
